hopefully fix shittiness on mobile

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     color: white;
     --moobcraftBlue: #A6C3FC;
     --moobcraftPink: #ECADFE;
-    width: 50%;
+    width: 40em;
     margin: auto;
 }
 
